--- a/_config.yml
+++ b/_config.yml
@@ -190,7 +190,7 @@ profile:
   author_title: 潜水是喧哗的，深水是沉默的
   author_description: 个人简介。
   location: Hangzhou, China
-  follow: https://github.com/greycodee
+  follow: http://mjava.top
   # Social Links
   social:
     links:
