--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ site:
     enabled: true
     width: 40
     height: 40
-    url: ../images/logo.png
+    url: http://mjava.top/images/avatar.jpg
   title: 灰色World # 页面title
   favicon: /favicon.ico
   board: <p>记录生活点滴!</p> # 站点公告
