update proxu url

--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ comment:
     repo: blog-comment
     ClientID: 1285c7d6c01b94eaac83
     ClientSecret: 6984733d040b27f6c9b1a35aadff424c703db30f
-    proxy: https://proud-thunder-53ad.zhengminghui99.workers.dev
+    proxy: https://proud-thunder-53ad.zhengminghui99.workers.dev/https://github.com/login/oauth/access_token
   valine: # Valine. https://valine.js.org
     appid:  # your leancloud application appid
     appkey:  # your leancloud application appkey
