--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ site:
     enabled: true
     width: 40
     height: 40
-    url: http://mjava.top/images/avatar.jpg
+    url: http://cdn.mjava.top/blog/%E7%81%B0%E8%89%B2Code.jpg
   title: 灰色World # 页面title
   favicon: /favicon.ico
   board: <p>记录生活点滴!</p> # 站点公告
@@ -185,7 +185,7 @@ fb_app_id:
 # profile
 profile:
   enabled: true # Whether to show profile bar
-  avatar: images/avatar.jpg
+  avatar: http://cdn.mjava.top/blog/%E7%81%B0%E8%89%B2Code.jpg
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
   author: 灰色World
   author_title: 潜水是喧哗的，深水是沉默的
