--- a/_config.yml
+++ b/_config.yml
@@ -86,11 +86,11 @@ donate:
   enable: true
   # 微信打赏
   wechatpay:
-    qrcode: images/donate/wechatpayimg.jpg
+    qrcode: https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io@master/images/donate/wechatpayimg.jpg
     title: 微信支付
   # 支付宝打赏
   alipay: 
-    qrcode: images/donate/alipayimg.jpg
+    qrcode: https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io@master/images/donate/alipayimg.jpg
     title: 支付宝
 
 # Share
