--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ menu:
   # Books: books  # 豆瓣书单
   Links: links  # 友链
   About: about  # 关于
+  Wikis: wikis  # wiki维基
 
 # Enable/Disable menu icons
 menu_icons:
@@ -20,6 +21,7 @@ menu_icons:
   books: icon-book-fill
   links: icon-friendship
   about: icon-cup-fill
+  wikis: icon-book-shelf
 
 # rss
 rss: /atom.xml
