去除评论和赞赏码

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ search:
 
 # Donate
 donate:
-  enable: true
+  enable: false
   # 微信打赏
   wechatpay:
     qrcode: https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io@master/images/donate/wechatpayimg.jpg
@@ -110,7 +110,7 @@ github:
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
 comment:
-  type: gitalk  # 启用哪种评论系统
+  type: none  # 启用哪种评论系统
   disqus:  # enter disqus shortname here
   youyan: 
     uid: 1783844 # enter youyan uid 
